# ok-cpp

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  REFACTOR_PLAN.md  install.sh  pyproject.toml  uninstall.sh
.claude/rules/: cmake-conventions.md  python-style.md
.claude/skills/: add-template.md
demo/test/: CMakeLists.txt
demo/test2_qt/: CMakeLists.txt  main.cpp
docs/: git_process.md
lib/ok-cpp/: VERSION  common.sh
lib/ok-cpp/modules/: cmd_config.sh  cmd_doctor.sh  cmd_mkp.sh  cmd_run.sh
lib/ok-cpp/templates/default/: CMakeLists.txt
lib/ok-cpp/templates/qt/: CMakeLists.txt
lib/ok-cpp/templates/qt/include/: MainWindow.h
lib/okcpp/: __init__.py
lib/okcpp/cli/: __init__.py  run.py
lib/okcpp/core/: __init__.py  builder.py  detector.py  template.py
lib/okcpp/utils/: __init__.py  config.py  log.py  path.py
src/okcpp/cli/: __init__.py  build_template.py  config.py  delete_template.py  doctor.py  mkp.py
src/okcpp/core/: builder.py
src/okcpp/templates/default/: CMakeLists.txt
src/okcpp/templates/dynamic-lib/: CMakeLists.txt
src/okcpp/templates/dynamic-lib/src/: mylib.cpp
src/okcpp/templates/dynamic-lib/test/: main.cpp
src/okcpp/templates/qt/: CMakeLists.txt
src/okcpp/templates/qt/src/: MainWindow.cpp
src/okcpp/templates/static-lib/: CMakeLists.txt
src/okcpp/templates/static-lib/include/: mylib.h
src/okcpp/templates/static-lib/test/: main.cpp
